--- a/webextensions/sidebar/styles/throbber.css
+++ b/webextensions/sidebar/styles/throbber.css
@@ -106,22 +106,30 @@ tab-item:not(.collapsed) .throbber {
   mask-image: url("./throbber.svg");
 }
 
-#tabbar tab-item:not(.collapsed).loading.throbber-unsynchronized:not(.rtl) .throbber::before {
+#tabbar tab-item:not(.collapsed).loading.throbber-unsynchronized .throbber::before {
   background-image: none;
+}
+:root:not(.rtl)
+  #tabbar tab-item:not(.collapsed).loading.throbber-unsynchronized .throbber::before {
   mask: -moz-element(#conductor-throbber) no-repeat left center / 100%;
 }
-#tabbar tab-item:not(.collapsed).loading.throbber-unsynchronized.rtl .throbber::before {
-  background-image: none;
+:root.rtl
+  #tabbar tab-item:not(.collapsed).loading.throbber-unsynchronized .throbber::before {
   mask: -moz-element(#conductor-throbber) no-repeat right center / 100%;
 }
-:root.simulate-svg-context-fill #tabbar tab-item:not(.collapsed).loading.throbber-unsynchronized .throbber::before {
+:root.simulate-svg-context-fill
+  #tabbar tab-item:not(.collapsed).loading.throbber-unsynchronized .throbber::before {
   mask: -moz-element(#conductor-throbber-container) no-repeat;
 }
 
-:root#conductor-throbber {
+:root:not(.rtl) #conductor-throbber {
   background: url("/resources/icons/hourglass.svg") no-repeat left center;
 }
-:root.animation #conductor-throbber {
+:root.rtl #conductor-throbber {
+  background: url("/resources/icons/hourglass.svg") no-repeat right center;
+}
+:root.animation:not(.rtl) #conductor-throbber,
+:root.animation.rtl #conductor-throbber {
   background-image: url("./throbber.svg");
 }
 
